--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
               </a>
 
               <a href="https://leetcode.com/raghavsinghal11" target="_blank">
-                <button class="icon-btn leetcode">
-                  <i class="fa fa-leetcode"></i>
+                <button class="icon-btn codeforces">
+                  <i class="fa fa-codeforces"></i>
                 </button>
               </a>
 
