--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           </h2>
         </blockquote> -->
         <p>
-          I am a Computer Science Grad Student at Arizona State University. 
+          I am currently working as a Software Engineer in a Blockchain Startup - DLT Labs and have an Undergraduate degree in Information Technology from KIET(KRISHNA INSTITUTE OF ENGINEERING AND TECHNOLOGY) GROUP OF INSTITUTIONS. University - DR A.P.J Adbul Kalam Technical University with a GPA of 8.94.
         </p>
         <p>
           
