--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
           </h2>
         </blockquote> -->
         <p>
-          I am currently working as a Software Engineer in a Blockchain Startup - DLT Labs and have an Undergraduate degree in Information Technology from KIET(KRISHNA INSTITUTE OF ENGINEERING AND TECHNOLOGY) GROUP OF INSTITUTIONS. University - DR A.P.J Adbul Kalam Technical University with a GPA of 8.94.
+          I am currently working as a Software Engineer in a Blockchain Startup - DLT Labs and have an Undergraduate degree in Information Technology from Krishna Institute Of Engineering and Technology. University - DR A.P.J Adbul Kalam Technical University with a GPA of 8.94.
         </p>
         <p>
           
-          Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision. 
+          Detail-oriented Software Engineer with professional experience in Backend Development, Blockchain development using HyperLedger Fabric and learning new tech like Kafka, Docker and Elastic Search. I am adept in C++, JavaScript, Python, Django, Flask, SQL, NodeJs, ExpressJs, MongoDB ,HTML/CSS, Php, GIT and Data Structures & Algorithms. 
           <!-- Detail-oriented Software Engineer with a get-it-done, on-time, and high-quality product spirit and a keen interest in Software Development and Artificial Intelligence. -->
         </p>
         <!-- <p>
@@ -294,119 +294,38 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                <a href="https://www.dltlabs.com/" target="_blank"><img alt="DLT logo"
+                    src="/assets/img/dlt-logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                  <span class="card-title"><a href="https://www.dltlabs.com/" target="_blank"
+                      class="teal-text hoverline">DLT LABS</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">Software Engineer</div>
             <ul>
               <li>
-                Developed modular REST APIs for multiple portals of e-commerce web application.
+                DLT Labs™ is a global leaderin the development and delivery of
+                    enterprise blockchain technologies and solutions, blockchain-based freight and payment network, the world's largest full production blockchain solution for any industrial application. 
               </li>
               <li>
-                Improved the loading time of the web application by improving the database schema and queries.
+                Working with the ASIK Team on the Asset Track Product, a supply
+                chain project implemented on Blockchain Technology for Clients like Walmart Canada.
               </li>
               <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> NodeJS, ExpressJs , Blockchain , HyperLedger Fabric etc.
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
-          </div>
-        </div>
-
-        
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
-              </div>
-              <!-- <div class="col s12 m10"> -->
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
-            <ul>
-              <li>
-                Improved an in-production optimization algorithm which reduced the cycle-time of the automation process.
-              </li>
-              <li>
-                Expanded and modularized the algorithm from one system one robot to a multi-system multi-robot paradigm.
-              </li>
-              <li>
-                Designed and developed a Video Analytics application that tracks the activity and location of each human
-                in a multi-camera environment
-                along with detailed visualization - from scratch.
-              </li>
-              <li>Improved the speed of the Video Analytics application by incorporating the YOLOv3 model for object
-                detection and DeepSORT for
-                multi-object tracking.</li>
-              <li>
-                <b>Tools:</b> Python, OpenCV, Keras, Tensorflow, PyTorch
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>OCT 2020 - Current | Noida, India</span>
           </div>
         </div>
 
         <!-- Experience 2 -->
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <a href="https://www.mtag.in" target="_blank"><img alt="Mtag logo"
-                    src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" /></a>
-
-              </div>
-
-              <!-- <div class="col s12 m10"> -->
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="https://www.mtag.in" target="_blank"
-                      class="teal-text hoverline">Mtag
-                      Innovations</a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Data Scientist</div>
-            <ul>
-              <li>
-                Developed a cloud-based data visualization and analytics web application aimed at storing and
-                visualizing
-                data-points of each IoT devices.
-              </li>
-              <li>
-                Designed and implemented a stacking model predicting the degradation of drugs and achieved 75% - 83%
-                accuracy depending on the data
-                for each drug.
-              </li>
-              <li>
-                <b>Tools:</b> Python, IBM Cloud, Node Red, Flask
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
-          </div>
-        </div>
-
-        <!-- Experience 3 -->
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -417,8 +336,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
+                      class="teal-text hoverline">Team ERP </a></span>
                 </p>
               </div>
             </div>
