--- a/index.html
+++ b/index.html
@@ -330,35 +330,38 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
+                <a href="https://in.linkedin.com/company/team-erp" target="_blank"><img alt="Team ERP logo"
+                    src="/assets/img/team-erp.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
+                  <span class="card-title"><a href="https://in.linkedin.com/company/team-erp" target="_blank"
                       class="teal-text hoverline">Team ERP </a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <div class="role brown-text text-darken-2">Web Developer Intern</div>
             <ul>
               <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
+                Team of 18-20 interns working on the Education Assessment System (EASy)
+                and Human Resource Management System (HRMS), SaaS solutions forthe
+                administration of educational institutions.
               </li>
               <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
+                Worked as Backend developer- Wrote and reviewed code for Python using
+                Django, Flask Framework.
               </li>
               <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
+                Worked on the HRMS Module and College Official Website and designed
+                APIs.
+              </li>
+              <li>
+                <b>Tools:</b> Python, Django, Flask ,GIT and REST APIs.
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
+            <span>Jan 2018 - Mar 2018 | Ghaziabad, India</span>
           </div>
         </div>
 
