--- a/index.html
+++ b/index.html
@@ -523,13 +523,13 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/insta.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Visual Question Answering<i
+                <span class="card-title activator teal-text hoverline">INSTAGRAMY<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  An attention-based classification model that aims at generating an answer for a given input image.
+                  An Angular- Image sharing App.
                 </p>
               </div>
               <div class="card-reveal">
@@ -538,16 +538,13 @@
                 <span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Incorporated Convolution Neural Networks (CNN) for extracting image features and Long Short Term
-                    Memory for extracting question
-                    embeddings.</li>
-                  <li>Tested the model on the COCO dataset, abstract scenes images, and got 69% overall accuracy on the
-                    VQA evaluation metric.</li>
+                  <li>Basic Features like Authentication, Upload Image , Comment section were
+                    added and Deployed using Firebase.</li>
 
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                    href="https://github.com/Raghavsangal/Insta_clone" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -560,13 +557,13 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/news_teller.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Video Summarizer<i
+                <span class="card-title activator teal-text hoverline">NEWSTELLER<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A Seq2Seq model that generates a short summary of the given input video.
+                  Web Based App to retrieve latest news using News APIs and Web Scrapping.
                 </p>
               </div>
               <div class="card-reveal">
@@ -575,16 +572,15 @@
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Incorporated CNN to detect and classify objects in the video frames and Long Short Term Memory for
-                    generating a summary.</li>
-                  <li>Evaluated the model on MSVD (Microsoft Video Description Corpus) dataset; achieved 0.77, 0.71,
-                    0.52 scores respectively on ROGUE,
-                    BLEU, METEOR evaluation metrics.</li>
+                  <li>Basic Features like Latest News, Weather Forecast , Live Sports Score and
+                    Desktop Notification fortimely updates.</li>
+                  <li>Technologies: Flask(Python Framework),Wikipedia API, HTML/CSS
+                    ,JavaScript and Beautiful Soup(Scrapping).</li>
 
                 </ul>
                 <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Raghavsangal/NewsTeller/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -597,13 +593,13 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/source_all.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Image Generator<i
+                <span class="card-title activator teal-text hoverline">SOURCE FOR ALL<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  An image generator based on the concept of adversarial networks (GANs)
+                  A team project, a website to connect students and teachers.
                 </p>
               </div>
               <div class="card-reveal">
@@ -612,14 +608,12 @@
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Developed system was tested on a human-face database and loss was calculated by comparing the PCAs
-                    of generated and original image.</li>
-                  <li>Calculated difference in PCA was less than 10%, depicting the successful generation of an image by
-                    the generator.</li>
+                  <li>Add friends, messaging , notes sharing , profile updation were included.</li>
+                    <li> Worked as Backend Developer made using Php,MySql,JS.</li>
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Raghavsangal/source-for-all/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -632,13 +626,14 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/just-travel.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Head Counting System<i
+                <span class="card-title activator teal-text hoverline">Just Travel<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A system that calculates the attendance of the class from a panoramic image of a live classroom.
+                  A Team Project.
+                  This is a prototype working model for Car Pooling System. It was a group hackathon.
                 </p>
               </div>
               <div class="card-reveal">
@@ -647,14 +642,19 @@
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Used Singular Value Decomposition for image compression; applied various image processing
-                    techniques and morphological operations to
-                    detect the number of heads.</li>
+                  <li>It was a Hackathon Project made in a Team of 5 members.</li>
+                  <li>I was actively taking part in discussions while my team members were creativly designing it using AdobeXD.</li>
 
                 </ul>
                 <div class="card-action">
+                  <a aria-label="Visit the working proto-type"
+                    href="https://xd.adobe.com/view/c3f9dc9b-6c74-467c-62bc-43caf9076a35-b5c8/" target="_blank"
+                    data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                      
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                    href="https://github.com/Raghavsangal/Just-Travel" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
