--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   <meta property="og:image" content="https://raghavsangal.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Engineer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com" />
   <meta name="author" content="Raghav Sangal" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
@@ -144,11 +144,10 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
-          onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Raghav's resume in a new tab" href="https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
+        
+        <!-- // RESUME -->
+        <!-- <a aria-label="Open Raghav's resume in a new tab" href="" target="_blank"
+        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>   -->
       </li>
     </ul>
   </nav>
@@ -230,8 +229,13 @@
                   <i class="fa fa-code"></i>
                 </button>
               </a>
+              <a href="https://codeforces.com/profile/raghavsinghal11}{\bf raghavsinghal11" target="_blank">
+                <button class="icon-btn free-code-camp">
+                  <i class="fa fa-free-code-camp"></i>
+                </button>
+              </a>
 
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <!-- <a href="http://linkedin.com/in/Raghavbhogayata" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -470,7 +474,7 @@
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/django-local-library"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Raghavbhogayata/django-local-library"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -480,44 +484,7 @@
           </div> -->
 
           <!-- Flask Project -->
-          <div class="col s12 m6 l6">
-            <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
-                style="height: 100%; width: 100%" class="activator" />
-              </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Blog Web-App<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  A simple and extensible blog web-app based on Flask.
-                </p>
-              </div>
-              <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title teal-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, Flask, SQLAlchemy, Postgresql, Python</li>
-                  <li>Users can view posts and contact the admin via Contact Page.</li>
-                  <li>Admin can Add, Delete, Update posts.</li>
 
-
-                </ul>
-                <div class="card-action">
-                  <a aria-label="Visit Blog website" href="https://flask-heroku-blog.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/flask-blog"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
 
           <!-- VQA -->
           <div class="col s12 m6 l6">
@@ -621,7 +588,43 @@
               </div>
             </div>
           </div>
+          <div class="col s12 m6 l6">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of web app" src="/assets/img/blockain-election.png"
+                style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Blockchain Elections<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Making a blockchain app to conduct elections fairly without any cheating.
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title teal-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> NodeJs, ExpressJs, HyperLedger Fabric etc.</li>
+                  <li>It is currently ongoing......</li>
 
+
+                </ul>
+                <!-- <div class="card-action">
+                  <a aria-label="Visit Blog website" href="https://flask-heroku-blog.herokuapp.com/" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Raghavbhogayata/flask-blog"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div> -->
+            </div>
+          </div>
           <!-- Head Counting System -->
           <div class="col s12 m6 l6">
             <div class="card medium">
@@ -687,30 +690,36 @@
                 <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
               </div>
               <div class="col s4 m2">
+                <img alt="" src="/assets/img/cpp_llogo.png" class="responsive-img" />C++
+              </div>
+              <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+                <img alt="" src="/assets/img/javascript.png" class="responsive-img" />JavaScript
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="/assets/img/git.png" class="responsive-img" />GIT
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/blockchain_logoo.jpg" class="responsive-img" />BlockChain
               </div>
             </div>
           </div>
         </div>
 
-        <div class="card">
+        <!-- <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NodeJS
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />ExpressJs
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />Flask
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
@@ -720,7 +729,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Frameworks -->
         <div class="card">
@@ -734,23 +743,20 @@
                 <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
+                <img alt="" src="/assets/img/nodejs.png" class="responsive-img" />NodeJS
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+                <img alt="" src="/assets/img/express_logo.png" class="responsive-img" />ExpressJs
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+                <img alt="" src="/assets/img/fabric_logo.jpg" class="responsive-img" />HyperLedger Fabric
               </div>
             </div>
           </div>
         </div>
 
         <!-- Other -->
-        <div class="card">
+        <!-- <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Other</h4>
             <div class="row text-center">
@@ -767,7 +773,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- certifications -->
         <!-- <div class="card">
@@ -816,22 +822,23 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.kiet.edu/" target="_blank" class="teal-text hoverline">KIET GROUP OF INSTITUTIONS</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Ghaziabad,India</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>B.Tech in Information Technology     
                   <br>
-                  <b>CGPA: </b>4/4
+                  <b>CGPA: </b>8.94/10
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Data Structures and Algorithms</li>
+                    <li>Operating Systems</li>
+                    <li>Database Management Systems</li>
+                    <li>Object Oriented Techniques</li>                 
                   </ul>
                   </p>
 
@@ -842,29 +849,15 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="http://balvikasschoolpanipat.edu.in/?page_id=211" target="_blank" class="teal-text hoverline">Bal Vikas School
+                      </a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Panipat, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b> High School (Class 12th)
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>Percentage: </b>86.6%
                 </p>
-
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
-                  </ul>
-                  </p>
-
-                </ul>
               </div>
             </div>
           </div>
@@ -877,29 +870,29 @@
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Raghav" data-position="top" data-tooltip="Call Raghav"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Raghav">+91-8279753920</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Raghav" href="mailto:raghavsinghal11@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Raghav" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Raghav" href="mailto:raghavsinghal11@gmail.com"
+              class="hoverline">raghavsinghal11@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Raghav on GitHub" href="http://github.com/Raghavsangal" target="_blank"
+            data-position="top" data-tooltip="View Raghav on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Raghav on Github" href="http://github.com/Raghavsangal" class="hoverline"
+              target="_blank">github.com/Raghavsangal</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Raghav on LinkedIn" href="http://linkedin.com/in/raghavsangal" target="_blank"
+            data-position="top" data-tooltip="View Raghav on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Raghav on LinkedIn" href="http://linkedin.com/in/raghavsangal"
+              class="hoverline" target="_blank">linkedin.com/in/raghavsangal</a></a>
         </p>
       </div>
     </section>
