--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
-      <li class="bold">
+      <!-- <li class="bold">
         <a aria-label="Open Raghav's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
@@ -229,9 +229,9 @@
                   <i class="fa fa-code"></i>
                 </button>
               </a>
-              <a href="https://codeforces.com/profile/raghavsinghal11}{\bf raghavsinghal11" target="_blank">
-                <button class="icon-btn free-code-camp">
-                  <i class="fa fa-free-code-camp"></i>
+              <a href="https://codeforces.com/profile/raghavsinghal11" target="_blank">
+                <button class="icon-btn code">
+                  <i class="fa fa-code"></i>
                 </button>
               </a>
 
