--- a/index.html
+++ b/index.html
@@ -649,7 +649,17 @@
                   <li>I was actively taking part in discussions while my team members were creativly designing it using AdobeXD.</li>
 
                 </ul>
-                <div class="card-action">
+                 <div class="card-action">
+                  <a aria-label="Visit prototype" href="https://xd.adobe.com/view/c3f9dc9b-6c74-467c-62bc-43caf9076a35-b5c8/" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Raghavsangal/Just-Travel"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+                <!-- <div class="card-action">
                   <a aria-label="Visit the working proto-type"
                     href="https://xd.adobe.com/view/c3f9dc9b-6c74-467c-62bc-43caf9076a35-b5c8/" target="_blank"
                     data-position="top" data-tooltip="View Source"
@@ -661,7 +671,7 @@
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
